--- a/css/rating.css
+++ b/css/rating.css
@@ -1,7 +1,7 @@
 .rating {
     --dir: right;
-    --fill: gold;
-    --fillbg: rgba(100, 100, 100, 0.15);
+    --fill: var(--deep-saffron);
+    --fillbg: var(--hookers-green);
     --heart: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.328l-1.453-1.313q-2.484-2.25-3.609-3.328t-2.508-2.672-1.898-2.883-0.516-2.648q0-2.297 1.57-3.891t3.914-1.594q2.719 0 4.5 2.109 1.781-2.109 4.5-2.109 2.344 0 3.914 1.594t1.57 3.891q0 1.828-1.219 3.797t-2.648 3.422-4.664 4.359z"/></svg>');
     --star: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 17.25l-6.188 3.75 1.641-7.031-5.438-4.734 7.172-0.609 2.813-6.609 2.813 6.609 7.172 0.609-5.438 4.734 1.641 7.031z"/></svg>');
     --stars: 5;
@@ -10,8 +10,10 @@
     --value: 1;
     --w: calc(var(--stars) * var(--starsize));
     --x: calc(100% * (var(--value) / var(--stars)));
+    background-color: var(--teal-blue);
     block-size: var(--starsize);
     inline-size: var(--w);
+    margin: auto;
     position: relative;
     touch-action: manipulation;
     -webkit-appearance: none;
