--- a/css/searchPage.css
+++ b/css/searchPage.css
@@ -1,3 +1,4 @@
+#marca,
 #estilo
 {
     flex: 100%;
@@ -10,6 +11,7 @@
 {
   display: none;
 }
+#marca label,
 #estilo label
 {
     border-top: 2px solid black;
@@ -22,6 +24,8 @@
     text-align: center;
     text-shadow: .5px .5px 0em var(--gainsboro),.1px .1px 2.8em var(--gainsboro);
 }
+#marca input,
+#color input,
 #estilo input
 {
     display: none;
@@ -54,6 +58,50 @@
 {
     background: var(--teal-blue);
     padding: 0;
+}
+.flexbox
+{
+    display: flex;
+    flex-wrap: wrap;
+    margin: .3em .5em;
+    min-width: 0;
+}
+#color label
+{
+    display: flex;
+    flex: 0 0 25%;
+    align-content: space-around;
+    justify-content: center;
+    margin: .2em 0;
+}
+#color label:last-child
+{
+    align-self: center;
+    flex: 1 1 100%;
+}
+#color label span
+{
+    border: .2em solid black;
+    border-radius: 100vh;
+    display: flex;
+    min-height: 3vw;
+    min-width: 3vw;
+    position: relative;
+}
+.colorImg
+{
+    display: none;
+    margin:auto;
+    height: 1.3em;
+}
+:checked + img
+{
+    display: flex;
+}
+.flexbox label
+{
+    display: flex;
+    flex: 0 0 50%;
 }
 :checked + span
 {
