--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-@font-face{
-    font-family: 'Righteous';
-    font-weight: 500;
-    font-style: normal;
-    src: url('/fonts/Righteous-Regular.ttf');
-}
 :root
 {
     --dark-purple:hsl(242, 66%, 21%);
@@ -23,6 +17,12 @@
     margin: 0;
     padding: 0;
 }
+#map {
+    height: 400px;
+    /* The height is 400 pixels */
+    width: 100%;
+    /* The width is the width of the web page */
+  }
 .content-wrapper
 {
     display: grid;
