--- a/css/search.css
+++ b/css/search.css
@@ -1,8 +1,9 @@
 .search-bar {
-  --size: 60px;
-  border: 2px solid var(--pale-green);
+  --size: 32px;
+  border: 2px solid var(--persian-blue);
   border-radius: 100vh;
   display: flex;
+  flex-direction: row-reverse;
   height: var(--size);
   overflow: hidden;
   padding: 3px;
@@ -10,13 +11,16 @@
   transition: width 300ms ease-in-out;
   width: var(--size);
 }
+.search-bar img{
+  width: 18px;
+}
 .search-bar__input {
   border: 0;
   bottom: 0;
   cursor: pointer;
   flex-grow: 1;
   font-size: 1.5rem;
-  left: 0;
+  right: 0;
   line-height: calc(var(--size) - 3px);
   opacity: 0;
   padding: 0 0.5em;
@@ -32,23 +36,28 @@
   border-radius: 50vh;
   cursor: pointer;
   font-size: 1.5rem;
-  height: calc(var(--size) - 10px);
-  margin-left: auto;
+  height: calc(var(--size) - 50px);
+  margin-right: auto;
   transition: background 150ms ease-in-out;
-  width: calc(var(--size) - 10px);
+  width: calc(var(--size) - 5px);
 }
 .search-bar:focus-within {
-  width: 100%;
+  width: 60%;
 }
 .search-bar:focus-within .search-bar__input {
-  background: lightblue;
+  background: var(--maximum-blue);
   cursor: initial;
   opacity: 1;
   width: calc(100% - var(--size));
 }
 .search-bar:focus-within .search-bar__submit {
-  background: var(--dark-green);
-  color: var(--whitish);
+  background: var(--persian-blue);
+  color: var(--lavender-web);
+  padding: 0;
+  margin-top: -7px;
+  margin-left: 0px;
+  height: var(--size);
+  width: var(--size);
 }
 .search-bar:focus-within .search-bar__submit:focus {
   outline: 0;
