--- a/css/exhibit.css
+++ b/css/exhibit.css
@@ -1,9 +1,37 @@
+body{
+  background: var(--lavender-web);
+}
 #itemImage picture img{
   width: calc(100vw / 4);
 }
+#exCont
+{
+  border: .75vw double var(--oxford-blue);
+}
+#svgHell
+{
+  border-top: .5vw double var(--oxford-blue);
+}
+#itemIcon img
+{
+  height: 16vw;
+}
+#shoesWhose img
+{
+  height: 8vw;
+  padding: 0.45vh;
+}
+.buttonRow
+{
+  padding: 0 8vh;
+}
+.svgTitle
+{
+  border-bottom: .5vw double var(--oxford-blue);
+}
 .selectedIcon
 {
-  filter: invert(57%) sepia(98%) saturate(819%) hue-rotate(360deg) brightness(102%) contrast(104%);
+  filter: brightness(0) saturate(100%) invert(69%) sepia(67%) saturate(5280%) hue-rotate(137deg) brightness(93%) contrast(81%);
 }
 .zapatoORANG
 {
