--- a/css/card.css
+++ b/css/card.css
@@ -25,8 +25,8 @@
 }
 .mainCardImage
 {
-    background: #9a99bf;
-    border-bottom: 9pt double #F2F2F2;
+    background: var(--glaucous);
+    border-bottom: 9pt double var(--cornflower-blue);
     width: 100%;
 }
 .mainCardImage img
@@ -35,8 +35,7 @@
 }
 .mainCardTitle
 {
-    background: #a9d9be;
-    border-bottom: 9pt double #F2F2F2;
+    border-bottom: 9pt double var(--cornflower-blue);
     color: #141259;
     font-size: 24px;
     font-weight: 700;
@@ -45,16 +44,16 @@
 }
 .mainCardTitle a
 {
-    color: #141259;
+    color: var(--lavender-web);
     text-decoration: none;
 }
 .mainCardTitle a:hover
 {
-    color: #9a99bf;
+    color: var(--electric-blue);
 }
 .mainCardPrice
 {
-    border-bottom: 9pt double black;
+    border-bottom: 9pt double var(--cornflower-blue);
     font-size: 1.2em;
     font-weight: 700;
     line-height: 190%;
@@ -73,7 +72,7 @@
 }
 article
 {
-    background: #a9d9be;
+    background: var(--resolution-blue);
     border: .2em solid #141259;
     text-justify: center;
     margin: auto;
