--- a/css/search.css
+++ b/css/search.css
@@ -1,6 +1,6 @@
 .search-bar {
-  --size: 32px;
-  border: 2px solid var(--persian-blue);
+  --size: 40px;
+  border: 2px solid var(--oxford-blue);
   border-radius: 100vh;
   display: flex;
   flex-direction: row-reverse;
@@ -12,7 +12,9 @@
   width: var(--size);
 }
 .search-bar img{
-  width: 18px;
+  height: 24px;
+  vertical-align: top;
+  padding-top: 4px;
 }
 .search-bar__input {
   border: 0;
@@ -29,6 +31,7 @@
 }
 .search-bar:focus {
   outline: 0;
+  padding-top: 3px;
 }
 .search-bar__submit {
   background: transparent;
@@ -43,6 +46,7 @@
 }
 .search-bar:focus-within {
   width: 60%;
+  padding-top: 10px;
 }
 .search-bar:focus-within .search-bar__input {
   background: var(--maximum-blue);
@@ -51,7 +55,6 @@
   width: calc(100% - var(--size));
 }
 .search-bar:focus-within .search-bar__submit {
-  background: var(--persian-blue);
   color: var(--lavender-web);
   padding: 0;
   margin-top: -7px;
