--- a/css/parallax.css
+++ b/css/parallax.css
@@ -1,7 +1,7 @@
 #parallax
 {
-  background-image: url("../img/salesOffer.jpg");
-  height: 24vh;
+  background-image: url("../img/shelves2.jpg");
+  height: 48vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
