--- a/css/footer.css
+++ b/css/footer.css
@@ -5,17 +5,14 @@
     color: #212529;
 }
 #copyr{
-    grid-area: copyr;
-    margin: 0 3vw;
     text-align: justify;
 }
 #copyr p{
     font-size: 10px;
 }
-#fLists{
-    display:grid;
-    grid-area: contenido;
-    grid-template-columns: 1fr 1fr 1fr;
+#fLists ul
+{
+    padding-left: 1rem;
 }
 #fLists ul li{
     list-style-type: none;
@@ -31,14 +28,14 @@
     font-family: 'Righteous', sans-serif;
     font-size: 32px;
     font-weight: 600;
-    margin-left: 2.5vw;
-    margin-top: 1vh;
 }
 #mail{
-    display:grid;
     font-weight: 600;
-    grid-area: mailing;
-    margin-right: 3vw;
+    margin-right: 2vw;
+}
+.fBox
+{
+    width: 100%;
 }
 #mail button{
     font-weight: 700;
@@ -46,27 +43,13 @@
 #mail h3{
     font-family: 'Righteous', sans-serif;
 }
-#terms{
-    grid-area: legalese;
-}
-.fBox{
-    display:grid;
+#terms a{
+    color: yellow;
+    font-weight: 600;
 }
 .fh5{
     color: #FFF;
     font-family: 'Righteous', sans-serif;
     font-size: 28px;
     font-weight: 500;
-}
-footer{
-    grid-area: footer;
-    grid-template-areas: "logo mailing"
-                         "contenido mailing"
-                         "copyr copyr"
-                         ". legalese";
-    grid-template-rows: 1fr 4fr 1fr 1fr;
-    grid-template-columns: 6fr 3fr;
-}
-footer ul li{
-    display: grid;
 }
