--- a/css/card.css
+++ b/css/card.css
@@ -11,8 +11,8 @@
 .mainCardButton
 {
     background: var(--dark-purple);
-    border: .3em solid var(--pale-green);
-    color: var(--pale-green);
+    border: .3em solid var(--lavender-web);
+    color: var(--lavender-web);
     font-size: 2.25ch;
     font-weight: bold;
     margin-left: 3%;
@@ -23,11 +23,11 @@
     
     background: var(--pale-purple);
     border: .3em solid var(--whitish);
-    color: #F2F2F2;
+    color: var(--lavender-web);
 }
 .mainCardImage
 {
-    background: var(--glaucous);
+    background: var(--cornflower-blue);
     border-bottom: 9pt double var(--cornflower-blue);
     width: 100%;
 }
@@ -56,6 +56,7 @@
 .mainCardPrice
 {
     border-bottom: 9pt double var(--cornflower-blue);
+    color: var(--lavender-web);
     font-size: 1.2em;
     font-weight: 700;
     line-height: 190%;
@@ -75,8 +76,8 @@
 #card1 article,
 #card2 article
 {
-    background: var(--resolution-blue);
-    border: .15em solid #141259;
+    background: var(--blue-ryb);
+    border: .15em solid var(--cornflower-blue);
     box-sizing: border-box;
     text-justify: center;
 }
