--- a/css/card.css
+++ b/css/card.css
@@ -1,6 +1,8 @@
-#card
+#card1,
+#card2
 {
     --size: 100%;
+    margin-left: .25vw;
     margin-top: 0.4em;
     display: flex;
     flex-direction: row;
@@ -9,8 +11,8 @@
 .mainCardButton
 {
     background: var(--dark-purple);
-    border: .3em solid var(--pale-green);
-    color: var(--pale-green);
+    border: .3em solid var(--lavender-web);
+    color: var(--lavender-web);
     font-size: 2.25ch;
     font-weight: bold;
     margin-left: 3%;
@@ -21,11 +23,11 @@
     
     background: var(--pale-purple);
     border: .3em solid var(--whitish);
-    color: #F2F2F2;
+    color: var(--lavender-web);
 }
 .mainCardImage
 {
-    background: var(--glaucous);
+    background: var(--cornflower-blue);
     border-bottom: 9pt double var(--cornflower-blue);
     width: 100%;
 }
@@ -54,6 +56,7 @@
 .mainCardPrice
 {
     border-bottom: 9pt double var(--cornflower-blue);
+    color: var(--lavender-web);
     font-size: 1.2em;
     font-weight: 700;
     line-height: 190%;
@@ -70,24 +73,18 @@
     margin-right: 0.25em;
     text-align:justify;
 }
-article
+#card1 article,
+#card2 article
 {
-    background: var(--resolution-blue);
-    border: .2em solid #141259;
+    background: var(--blue-ryb);
+    border: .15em solid var(--cornflower-blue);
+    box-sizing: border-box;
     text-justify: center;
-    margin: auto;
 }
-article img
+#card1 article img,
+#card2 article img
 {
     width: 100%;
-}
-
-@media all and (min-width: 576px)
-{
-    .mainCardSettings
-    {
-        width: calc((var(--size) / 2) - .1em);
-    }
 }
 
 @media all and (min-width: 768px)
@@ -96,18 +93,4 @@ article img
     {
         margin: 0.4em 1.5% 0.6em 1.5%;
     }
-    .mainCardSettings
-    {
-        margin-top: .25em;
-        width: calc((var(--size) / 3) - .25em)
-    }
-}
-
-@media all and (min-width: 992px)
-{
-    .mainCardSettings
-    {
-        margin-top: .25em;
-        width: calc((var(--size) / 4) - .15em)
-    }   
 }
