--- a/css/contact.css
+++ b/css/contact.css
@@ -1,10 +1,4 @@
-.bodyq{
-    background: rgb(14, 106, 106);
-}
-.inputContact{
-    width: 100%;
-}
-img{
-    width: 70%;
-    height: 70%;
+main
+{
+  background-image: url(../img/bluebg.jpg);
 }
