--- a/css/colors.css
+++ b/css/colors.css
@@ -10,7 +10,7 @@
   --wild-blue-yonder:hsl(221, 43%, 69%);
   --opal:hsl(164, 21%, 65%);
   --blueU: hsl(201,70%,82%);
-  --mangoTago: hsl(22,83%,58%);
+  --mangoTango: hsl(22,83%,58%);
   --red-crayola:hsl(347,86%,56%);
   --emerald:hsl(147,61%,47%);
   /* GREEN */
