Fixing issues before Upload

--- a/css/about.css
+++ b/css/about.css
@@ -10,4 +10,38 @@
 #abouTtitle{
   font-size: 72px;
   font-weight: 700;
-} 
+}
+#autor
+{
+    background: #f3eed9;
+    justify-content: center;
+    text-align: center;
+}
+
+#autor h4
+{
+    color: #00467b;
+    font-size: 24px;
+    margin: 15px 0px;
+}
+
+#autor img
+{
+    border: 5px double #00467b;
+    border-radius: 50%;
+    margin: auto;
+    width: 40vw;
+    height: 40vw;
+}
+
+#autor p
+{
+    color: #4276b0;
+    margin-bottom: 20px;
+    font-size: 18px;
+}
+
+#autorCard #autor
+{
+    padding: 30px;
+}
